fixed github icon and changed pixels to rem for grid-gap

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,7 +117,7 @@ main {
 // Work/Projects
 .projects {
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
 
   img {
